feat: add Prophet and N-BEATS models for demand forecasting

--- a/demand_forecasting.ipynb
+++ b/demand_forecasting.ipynb
@@ -9,19 +9,21 @@
     "# Predictive Demand Forecasting Using Machine Learning to Reduce Food Waste\n",
     "## Chapter 4: Results and Discussion\n",
     "\n",
-    "This notebook trains and evaluates **five machine-learning models** on Nigerian food-commodity\n",
+    "This notebook trains and evaluates **seven machine-learning models** on Nigerian food-commodity\n",
     "demand data, comparing them with **four evaluation metrics** to identify the best forecasting\n",
     "approach for each crop.\n",
     "\n",
-    "### Models Compared (5 models)\n",
+    "### Models Compared (7 models)\n",
     "\n",
     "| # | Model | Family | Key Idea |\n",
     "|---|---|---|---|\n",
-    "| 1 | **Random Forest (RF)** | Ensemble (bagging) | Averages many independent decision trees |\n",
+    "| 1 | **Random Forest** | Ensemble (bagging) | Averages many independent decision trees |\n",
     "| 2 | **XGBoost** | Ensemble (boosting) | Sequentially corrects errors via gradient descent |\n",
     "| 3 | **SVR** | Kernel-based | Fits an ε-insensitive tube using the RBF kernel |\n",
     "| 4 | **LSTM** | Recurrent Neural Network | Memory cells with input/forget/output gates |\n",
     "| 5 | **GRU** | Recurrent Neural Network | Simplified LSTM with reset & update gates |\n",
+    "| 6 | **Prophet** | Statistical (additive) | Decomposes series into trend + seasonality + holidays |\n",
+    "| 7 | **N-BEATS** | Deep learning (MLP) | Stacked FC blocks with residual learning |\n",
     "\n",
     "### Evaluation Metrics (4 metrics)\n",
     "\n",
@@ -32,7 +34,7 @@
     "| **R²** | Coefficient of Determination | 1.0 (higher is better) |\n",
     "| **MAPE** | Mean Absolute Percentage Error | 0% (lower is better) |\n",
     "\n",
-    "**Strategy:** Loop through every unique commodity, train all five models,\n",
+    "**Strategy:** Loop through every unique commodity, train all seven models,\n",
     "evaluate each with all four metrics, and identify the champion model per crop.\n",
     "\n",
     "---\n"
@@ -53,7 +55,7 @@
     "# ============================================================\n",
     "# Cell 1: Install Required Packages\n",
     "# ============================================================\n",
-    "!pip install -q xgboost scikit-learn tensorflow pandas numpy matplotlib seaborn tqdm joblib\n"
+    "!pip install -q xgboost scikit-learn tensorflow pandas numpy matplotlib seaborn tqdm joblib prophet\n"
    ]
   },
   {
@@ -76,7 +78,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from datetime import datetime\n",
-    "import joblib, os, json as _json\n",
+    "import joblib, os, json as _json, logging\n",
     "\n",
     "# Scikit-learn\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -87,11 +89,17 @@
     "# XGBoost\n",
     "from xgboost import XGBRegressor\n",
     "\n",
-    "# TensorFlow / Keras (LSTM + GRU)\n",
+    "# TensorFlow / Keras (LSTM, GRU, N-BEATS)\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import LSTM, GRU, Dense, Dropout\n",
+    "from tensorflow.keras.models import Sequential, Model\n",
+    "from tensorflow.keras.layers import (LSTM, GRU, Dense, Dropout,\n",
+    "                                     Input, Subtract, Add)\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "# Prophet\n",
+    "from prophet import Prophet\n",
+    "logging.getLogger('prophet').setLevel(logging.ERROR)\n",
+    "logging.getLogger('cmdstanpy').setLevel(logging.ERROR)\n",
     "\n",
     "# Plotting settings\n",
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
@@ -446,17 +454,21 @@
     "4. **Train SVR**: RBF kernel, C=100 (with standard scaling)\n",
     "5. **Train LSTM**: 2-layer LSTM (64 → 32 units), 12-month lookback\n",
     "6. **Train GRU**: 2-layer GRU (64 → 32 units), 12-month lookback\n",
-    "7. **Evaluate**: Compute RMSE, MAE, R², and MAPE for each model\n",
+    "7. **Train Prophet**: Facebook’s additive decomposition (trend + seasonality)\n",
+    "8. **Train N-BEATS**: Stacked FC blocks with residual learning, 12-month lookback\n",
+    "9. **Evaluate**: Compute RMSE, MAE, R², and MAPE for each model\n",
     "\n",
     "### Model Descriptions\n",
     "\n",
     "| Model | Family | How It Works | Strengths |\n",
     "|---|---|---|---|\n",
     "| **Random Forest** | Ensemble (bagging) | Builds many independent decision trees on random subsets of data and averages their predictions. | Robust to outliers, handles non-linear relationships, provides feature importance scores. |\n",
-    "| **XGBoost** | Ensemble (boosting) | Builds trees *sequentially* — each new tree corrects the errors of the previous ones using gradient descent. | Often the most accurate on tabular data; includes built-in regularisation to prevent overfitting. |\n",
-    "| **SVR** | Kernel-based | Fits a hyperplane (or curve, via the RBF kernel) that keeps predictions within an ε-margin of the true values, while penalising points outside the margin. | Effective in high-dimensional spaces; the kernel trick captures non-linear patterns without explicit feature expansion. |\n",
-    "| **LSTM** | Recurrent Neural Network | Processes sequences step-by-step using *memory cells* with input, forget, and output gates that learn which past information to keep or discard. | Captures long-range temporal dependencies; state-of-the-art for many sequence tasks. |\n",
-    "| **GRU** | Recurrent Neural Network | A simplified version of LSTM with only two gates (reset & update), combining the forget and input mechanisms into a single step. | Fewer parameters → faster training; often matches LSTM accuracy on shorter sequences. |\n"
+    "| **XGBoost** | Ensemble (boosting) | Builds trees *sequentially* — each new tree corrects the errors of the previous ones using gradient descent. | Often the most accurate on tabular data; built-in regularisation. |\n",
+    "| **SVR** | Kernel-based | Fits a curve (via the RBF kernel) that keeps predictions within an ε-margin of the true values. | Effective in high-dimensional spaces; captures non-linear patterns via the kernel trick. |\n",
+    "| **LSTM** | Recurrent NN | Processes sequences step-by-step using *memory cells* with input, forget, and output gates. | Captures long-range temporal dependencies. |\n",
+    "| **GRU** | Recurrent NN | Simplified LSTM with only two gates (reset & update). | Fewer parameters → faster training; often matches LSTM on shorter sequences. |\n",
+    "| **Prophet** | Statistical | Decomposes a time series into **trend** + **seasonality** + **holidays** using a piecewise linear growth curve and Fourier series. | Handles missing data gracefully; built-in holiday support; highly interpretable components. |\n",
+    "| **N-BEATS** | Deep Learning (MLP) | Stacks of fully-connected blocks. Each block outputs a *backcast* (reconstructing input) and a *forecast* (predicting future) via residual learning. | Purpose-built for time-series forecasting; no RNN needed; often outperforms LSTM/GRU on benchmarks. |\n"
    ]
   },
   {
@@ -524,8 +536,48 @@
     "    return model\n",
     "\n",
     "\n",
+    "def build_nbeats_model(input_dim, n_stacks=2, n_blocks=3, hidden_dim=128):\n",
+    "    \"\"\"\n",
+    "    Build a simplified N-BEATS model for demand forecasting.\n",
+    "\n",
+    "    N-BEATS uses stacks of fully-connected blocks.  Each block outputs a\n",
+    "    'backcast' (reconstructing the input) and a 'forecast' (predicting the\n",
+    "    target).  The residual from each block feeds the next; all forecasts\n",
+    "    are summed.\n",
+    "    \"\"\"\n",
+    "    inputs = Input(shape=(input_dim,))\n",
+    "    residual = inputs\n",
+    "    forecast_sum = None\n",
+    "\n",
+    "    for s in range(n_stacks):\n",
+    "        for b in range(n_blocks):\n",
+    "            # 4-layer FC block (following the original N-BEATS paper)\n",
+    "            h = Dense(hidden_dim, activation='relu')(residual)\n",
+    "            h = Dense(hidden_dim, activation='relu')(h)\n",
+    "            h = Dense(hidden_dim, activation='relu')(h)\n",
+    "            h = Dense(hidden_dim, activation='relu')(h)\n",
+    "\n",
+    "            # Backcast: reconstruct input (residual learning)\n",
+    "            backcast = Dense(input_dim, activation='linear')(h)\n",
+    "            # Forecast: predict target\n",
+    "            block_forecast = Dense(1, activation='linear')(h)\n",
+    "\n",
+    "            # Update residual\n",
+    "            residual = Subtract()([residual, backcast])\n",
+    "\n",
+    "            # Accumulate forecast\n",
+    "            if forecast_sum is None:\n",
+    "                forecast_sum = block_forecast\n",
+    "            else:\n",
+    "                forecast_sum = Add()([forecast_sum, block_forecast])\n",
+    "\n",
+    "    model = Model(inputs=inputs, outputs=forecast_sum)\n",
+    "    model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
+    "    return model\n",
+    "\n",
+    "\n",
     "def create_lstm_sequences(X, y, lookback=12):\n",
-    "    \"\"\"Create sliding-window sequences for LSTM / GRU input.\"\"\"\n",
+    "    \"\"\"Create sliding-window sequences for LSTM / GRU / N-BEATS input.\"\"\"\n",
     "    Xs, ys = [], []\n",
     "    for i in range(lookback, len(X)):\n",
     "        Xs.append(X[i - lookback:i])\n",
@@ -555,7 +607,7 @@
     "def train_and_evaluate_crop(commodity_name, df_features, feature_cols, target_col,\n",
     "                            test_size=0.2, lstm_lookback=12):\n",
     "    \"\"\"\n",
-    "    Train RF, XGBoost, SVR, LSTM, and GRU models for a single commodity.\n",
+    "    Train RF, XGBoost, SVR, LSTM, GRU, Prophet, and N-BEATS for a single commodity.\n",
     "    Returns dict with model results, predictions, test data, and trained models.\n",
     "    \"\"\"\n",
     "    # Filter and prepare data\n",
@@ -694,6 +746,62 @@
     "        predictions['GRU'] = gru_full\n",
     "        trained_models['GRU'] = gru_model\n",
     "\n",
+    "    # -----------------------------------------------------------------\n",
+    "    # 6. PROPHET\n",
+    "    # -----------------------------------------------------------------\n",
+    "    try:\n",
+    "        prophet_data = crop_data[['Date', 'Demand']].copy()\n",
+    "        prophet_data.columns = ['ds', 'y']\n",
+    "        prophet_train = prophet_data.iloc[:split_idx]\n",
+    "        prophet_test  = prophet_data.iloc[split_idx:]\n",
+    "\n",
+    "        prophet_model = Prophet(\n",
+    "            yearly_seasonality=True,\n",
+    "            weekly_seasonality=False,\n",
+    "            daily_seasonality=False,\n",
+    "            seasonality_mode='multiplicative'\n",
+    "        )\n",
+    "        prophet_model.fit(prophet_train)\n",
+    "\n",
+    "        future = prophet_test[['ds']]\n",
+    "        forecast = prophet_model.predict(future)\n",
+    "        prophet_pred = forecast['yhat'].values\n",
+    "\n",
+    "        results['Prophet'] = evaluate_model(y_test, prophet_pred)\n",
+    "        predictions['Prophet'] = prophet_pred\n",
+    "        trained_models['Prophet'] = prophet_model\n",
+    "    except Exception as e:\n",
+    "        print(f\"    Prophet failed: {e}\")\n",
+    "        results['Prophet'] = {'RMSE': np.nan, 'MAE': np.nan, 'R²': np.nan, 'MAPE': np.nan}\n",
+    "        predictions['Prophet'] = np.full(len(y_test), np.nan)\n",
+    "\n",
+    "    # -----------------------------------------------------------------\n",
+    "    # 7. N-BEATS\n",
+    "    # -----------------------------------------------------------------\n",
+    "    if len(X_seq) < MIN_SAMPLES:\n",
+    "        results['N-BEATS'] = {'RMSE': np.nan, 'MAE': np.nan, 'R²': np.nan, 'MAPE': np.nan}\n",
+    "        predictions['N-BEATS'] = np.full(len(y_test), np.nan)\n",
+    "    else:\n",
+    "        # Flatten sequences for N-BEATS (lookback x features -> single vector)\n",
+    "        X_nb_train = X_seq_train.reshape(X_seq_train.shape[0], -1)\n",
+    "        X_nb_test  = X_seq_test.reshape(X_seq_test.shape[0], -1)\n",
+    "\n",
+    "        nbeats_model = build_nbeats_model(X_nb_train.shape[1])\n",
+    "        early_stop_nb = EarlyStopping(monitor='loss', patience=10, restore_best_weights=True)\n",
+    "        nbeats_model.fit(X_nb_train, y_seq_train,\n",
+    "                         epochs=100, batch_size=16,\n",
+    "                         callbacks=[early_stop_nb], verbose=0)\n",
+    "\n",
+    "        nb_pred_scaled = nbeats_model.predict(X_nb_test, verbose=0).flatten()\n",
+    "        nb_pred = scaler_y.inverse_transform(nb_pred_scaled.reshape(-1, 1)).flatten()\n",
+    "\n",
+    "        results['N-BEATS'] = evaluate_model(y_seq_test_inv, nb_pred)\n",
+    "\n",
+    "        nb_full = np.full(len(y_test), np.nan)\n",
+    "        nb_full[:len(nb_pred)] = nb_pred\n",
+    "        predictions['N-BEATS'] = nb_full\n",
+    "        trained_models['N-BEATS'] = nbeats_model\n",
+    "\n",
     "    # Feature importance (from Random Forest)\n",
     "    fi = dict(zip(feature_cols, rf_model.feature_importances_))\n",
     "\n",
@@ -771,20 +879,20 @@
    "source": [
     "## 5. Results & Visualisation\n",
     "\n",
-    "Now that all five models have been trained on every valid commodity, we visualise the results to\n",
+    "Now that all seven models have been trained on every valid commodity, we visualise the results to\n",
     "understand which models perform best and why.\n",
     "\n",
     "### 5.1 Actual vs. Forecast Plots\n",
     "\n",
     "> **How to read this chart:**\n",
     "> - The **black line with dots** represents the *actual* demand values from the test set.\n",
-    "> - Each **coloured dashed line** represents a model's *predicted* values.\n",
+    "> - Each **coloured dashed line** represents a model’s *predicted* values.\n",
     "> - The closer a coloured line follows the black line, the better that model is at capturing the\n",
     ">   true demand pattern.\n",
-    "> - Large gaps between a model's line and the actual line indicate periods where the model struggled\n",
+    "> - Large gaps between a model’s line and the actual line indicate periods where the model struggled\n",
     ">   (e.g., sudden spikes or drops in demand that the model failed to anticipate).\n",
     "\n",
-    "For each commodity, the test-set predictions from all five models are plotted against the actual demand values.\n"
+    "For each commodity, the test-set predictions from all seven models are plotted against the actual demand values.\n"
    ]
   },
   {
@@ -805,7 +913,7 @@
     "# ============================================================\n",
     "\n",
     "def plot_actual_vs_forecast(commodity, output):\n",
-    "    \"\"\"Plot actual vs predicted values for all five models.\"\"\"\n",
+    "    \"\"\"Plot actual vs predicted values for all seven models.\"\"\"\n",
     "    fig, ax = plt.subplots(figsize=(14, 5))\n",
     "\n",
     "    test_dates  = pd.to_datetime(output['test_dates'])\n",
@@ -823,10 +931,12 @@
     "        'SVR':           '#9C27B0',\n",
     "        'LSTM':          '#4CAF50',\n",
     "        'GRU':           '#E91E63',\n",
+    "        'Prophet':       '#00BCD4',\n",
+    "        'N-BEATS':       '#FF5722',\n",
     "    }\n",
     "    for model_name, pred in predictions.items():\n",
     "        if not np.all(np.isnan(pred)):\n",
-    "            ax.plot(test_dates, pred, '--', label=model_name,\n",
+    "            ax.plot(test_dates[:len(pred)], pred, '--', label=model_name,\n",
     "                    color=colors.get(model_name, 'gray'),\n",
     "                    linewidth=1.5, alpha=0.85)\n",
     "\n",
@@ -834,7 +944,7 @@
     "                 fontsize=14, fontweight='bold')\n",
     "    ax.set_xlabel('Date')\n",
     "    ax.set_ylabel('Demand Index')\n",
-    "    ax.legend(loc='best')\n",
+    "    ax.legend(loc='best', fontsize=8)\n",
     "    ax.grid(True, alpha=0.3)\n",
     "    plt.xticks(rotation=45)\n",
     "    plt.tight_layout()\n",
@@ -886,7 +996,7 @@
     "# Cell 13: Performance Comparison Table & Heatmaps\n",
     "# ============================================================\n",
     "\n",
-    "MODEL_ORDER = ['Random Forest', 'XGBoost', 'SVR', 'LSTM', 'GRU']\n",
+    "MODEL_ORDER = ['Random Forest', 'XGBoost', 'SVR', 'LSTM', 'GRU', 'Prophet', 'N-BEATS']\n",
     "\n",
     "# Build comparison DataFrame\n",
     "rows = []\n",
@@ -1137,7 +1247,7 @@
     "\n",
     "    # Save the model (sklearn models -> joblib, keras models -> keras format)\n",
     "    safe_name = commodity.replace(' ', '_').replace('(', '').replace(')', '').replace('/', '_')\n",
-    "    if champ_name in ('LSTM', 'GRU'):\n",
+    "    if champ_name in ('LSTM', 'GRU', 'N-BEATS'):\n",
     "        model_obj.save(f'models/{safe_name}_model.keras')\n",
     "    elif champ_name == 'SVR':\n",
     "        joblib.dump(model_obj, f'models/{safe_name}_model.pkl')  # dict with model + scalers\n",
